Athena_Widget/include/Xm/in_Arbeit/Xm.pp


function XmConvertStringToUnits(screen:PScreen; spec:TString; orientation:longint; to_type:longint; parse_error:PXtEnum):longint;cdecl;external;
(* error 
                        register int from_type,
(* error 
                        register int from_val,
(* error 
                        register int to_type) ;
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
                        register int from_val,
(* error 
                        register int from_type) ;
 in declarator_list *)
 in declarator_list *)
(* error 
                        register int from_val,
(* error 
                        register int from_type) ;
 in declarator_list *)
 in declarator_list *)
(* error 
                        register int from_val,
(* error 
                        register int to_type) ;
 in declarator_list *)
 in declarator_list *)
(* error 
                        register int from_val,
(* error 
                        register int to_type) ;
 in declarator_list *)
 in declarator_list *)
procedure XmSetFontUnits(display:PDisplay; h_value:longint; v_value:longint);cdecl;external;
procedure XmSetFontUnit(display:PDisplay; value:longint);cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for MenuUtil.c    ******* }
procedure XmSetMenuCursor(display:PDisplay; cursorId:TCursor);cdecl;external;
function XmGetMenuCursor(display:PDisplay):TCursor;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for Simple.c    ******* }
function XmCreateSimpleMenuBar(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external;
function XmCreateSimplePopupMenu(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external;
function XmCreateSimplePulldownMenu(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external;
function XmCreateSimpleOptionMenu(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external;
function XmCreateSimpleRadioBox(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external;
function XmCreateSimpleCheckBox(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for VaSimple.c   ******* }
function XmVaCreateSimpleMenuBar(parent:TWidget; name:TString; args:array of const):TWidget;cdecl;external;
function XmVaCreateSimpleMenuBar(parent:TWidget; name:TString):TWidget;cdecl;external;
function XmVaCreateSimplePopupMenu(parent:TWidget; name:TString; callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external;
function XmVaCreateSimplePopupMenu(parent:TWidget; name:TString; callback:TXtCallbackProc):TWidget;cdecl;external;
function XmVaCreateSimplePulldownMenu(parent:TWidget; name:TString; post_from_button:longint; callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external;
function XmVaCreateSimplePulldownMenu(parent:TWidget; name:TString; post_from_button:longint; callback:TXtCallbackProc):TWidget;cdecl;external;
function XmVaCreateSimpleOptionMenu(parent:TWidget; name:TString; option_label:TXmString; option_mnemonic:TKeySym; button_set:longint; 
               callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external;
function XmVaCreateSimpleOptionMenu(parent:TWidget; name:TString; option_label:TXmString; option_mnemonic:TKeySym; button_set:longint; 
               callback:TXtCallbackProc):TWidget;cdecl;external;
function XmVaCreateSimpleRadioBox(parent:TWidget; name:TString; button_set:longint; callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external;
function XmVaCreateSimpleRadioBox(parent:TWidget; name:TString; button_set:longint; callback:TXtCallbackProc):TWidget;cdecl;external;
function XmVaCreateSimpleCheckBox(parent:TWidget; name:TString; callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external;
function XmVaCreateSimpleCheckBox(parent:TWidget; name:TString; callback:TXtCallbackProc):TWidget;cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for TrackLoc.c    ******* }
{$if NeedWidePrototypes}
{$else}
{$endif}
    { NeedWidePrototypes  }

function XmTrackingEvent(widget:TWidget; cursor:TCursor; confineTo:longint; confineTo:TBoolean; pev:PXEvent):TWidget;cdecl;external;
{$if NeedWidePrototypes}

function XmTrackingLocate(widget:TWidget; cursor:TCursor; confineTo:longint):TWidget;cdecl;external;
{$else}
(* error 
                        Boolean confineTo) ;
 in declarator_list *)
{$endif}
    { NeedWidePrototypes  }
    {*******    End Public Function Declarations    ******* }
    {*******    Visual.c    ******* }
    type

      TXmColorProc = procedure (bg_color:PXColor; fg_color:PXColor; sel_color:PXColor; ts_color:PXColor; bs_color:PXColor);cdecl;
    {*******    Public Function Declarations for Visual.c    ******* }

function XmSetColorCalculation(proc:TXmColorProc):TXmColorProc;cdecl;external;
function XmGetColorCalculation:TXmColorProc;cdecl;external;
procedure XmGetColors(screen:PScreen; color_map:TColormap; background:TPixel; foreground_ret:PPixel; top_shadow_ret:PPixel; 
                bottom_shadow_ret:PPixel; select_ret:PPixel);cdecl;external;
procedure XmChangeColor(widget:TWidget; background:TPixel);cdecl;external;
    {*******    End Public Function Declarations    ******* }
    {*******    Public Function Declarations for XmString.c    ******* }
function XmStringCreate(text:Pchar; charset:TXmStringCharSet):TXmString;cdecl;external;
function XmStringCreateSimple(text:Pchar):TXmString;cdecl;external;
function XmStringCreateLocalized(text:TString):TXmString;cdecl;external;
{$if NeedWidePrototypes}

function XmStringDirectionCreate(direction:longint):TXmString;cdecl;external;
{$else}
(* error 
                        XmStringDirection direction) ;
 in declarator_list *)
{$endif}
    { NeedWidePrototypes  }

function XmStringSeparatorCreate:TXmString;cdecl;external;
{$if NeedWidePrototypes}

function XmStringSegmentCreate(text:Pchar; charset:TXmStringCharSet; direction:longint; separator:longint):TXmString;cdecl;external;
{$else}
(* error 
                        Boolean separator) ;
 in declarator_list *)
{$endif}
    { NeedWidePrototypes  }

function XmStringLtoRCreate(text:Pchar; charset:TXmStringCharSet):TXmString;cdecl;external;
function XmStringCreateLtoR(text:Pchar; charset:TXmStringCharSet):TXmString;cdecl;external;
function XmStringInitContext(context:PXmStringContext; _string:TXmString):TBoolean;cdecl;external;
procedure XmStringFreeContext(context:TXmStringContext);cdecl;external;
function XmStringGetNextComponent(context:TXmStringContext; text:PPchar; charset:PXmStringCharSet; direction:PXmStringDirection; unknown_tag:PXmStringComponentType; 
               unknown_length:Pword; unknown_value:PPbyte):TXmStringComponentType;cdecl;external;
function XmStringPeekNextComponent(context:TXmStringContext):TXmStringComponentType;cdecl;external;
function XmStringGetNextSegment(context:TXmStringContext; text:PPchar; charset:PXmStringCharSet; direction:PXmStringDirection; separator:PBoolean):TBoolean;cdecl;external;
function XmStringGetLtoR(_string:TXmString; charset:TXmStringCharSet; text:PPchar):TBoolean;cdecl;external;
function XmFontListEntryCreate(tag:Pchar; _type:TXmFontType; font:TXtPointer):TXmFontListEntry;cdecl;external;
function XmFontListEntryCreate_r(tag:Pchar; _type:TXmFontType; font:TXtPointer; wid:TWidget):TXmFontListEntry;cdecl;external;
procedure XmFontListEntryFree(entry:PXmFontListEntry);cdecl;external;
function XmFontListEntryGetFont(entry:TXmFontListEntry; typeReturn:PXmFontType):TXtPointer;cdecl;external;
function XmFontListEntryGetTag(entry:TXmFontListEntry):Pchar;cdecl;external;
function XmFontListAppendEntry(old:TXmFontList; entry:TXmFontListEntry):TXmFontList;cdecl;external;
function XmFontListNextEntry(context:TXmFontContext):TXmFontListEntry;cdecl;external;
function XmFontListRemoveEntry(old:TXmFontList; entry:TXmFontListEntry):TXmFontList;cdecl;external;
function XmFontListEntryLoad(display:PDisplay; fontName:Pchar; _type:TXmFontType; tag:Pchar):TXmFontListEntry;cdecl;external;
function XmFontListCreate(font:PXFontStruct; charset:TXmStringCharSet):TXmFontList;cdecl;external;
function XmFontListCreate_r(font:PXFontStruct; charset:TXmStringCharSet; wid:TWidget):TXmFontList;cdecl;external;
function XmStringCreateFontList(font:PXFontStruct; charset:TXmStringCharSet):TXmFontList;cdecl;external;
function XmStringCreateFontList_r(font:PXFontStruct; charset:TXmStringCharSet; wid:TWidget):TXmFontList;cdecl;external;
procedure XmFontListFree(fontlist:TXmFontList);cdecl;external;
function XmFontListAdd(old:TXmFontList; font:PXFontStruct; charset:TXmStringCharSet):TXmFontList;cdecl;external;
function XmFontListCopy(fontlist:TXmFontList):TXmFontList;cdecl;external;
function XmFontListInitFontContext(context:PXmFontContext; fontlist:TXmFontList):TBoolean;cdecl;external;
function XmFontListGetNextFont(context:TXmFontContext; charset:PXmStringCharSet; font:PPXFontStruct):TBoolean;cdecl;external;
procedure XmFontListFreeFontContext(context:TXmFontContext);cdecl;external;
function XmStringConcat(a:TXmString; b:TXmString):TXmString;cdecl;external;
function XmStringConcatAndFree(a:TXmString; b:TXmString):TXmString;cdecl;external;
function XmStringNConcat(first:TXmString; second:TXmString; n:longint):TXmString;cdecl;external;
function XmStringCopy(_string:TXmString):TXmString;cdecl;external;
function XmStringNCopy(str:TXmString; n:longint):TXmString;cdecl;external;
function XmStringByteCompare(a1:TXmString; b1:TXmString):TBoolean;cdecl;external;
function XmStringCompare(a:TXmString; b:TXmString):TBoolean;cdecl;external;
function XmStringLength(_string:TXmString):longint;cdecl;external;
function XmStringEmpty(_string:TXmString):TBoolean;cdecl;external;
function XmStringIsVoid(_string:TXmString):TBoolean;cdecl;external;
function XmStringHasSubstring(_string:TXmString; substring:TXmString):TBoolean;cdecl;external;
procedure XmStringFree(_string:TXmString);cdecl;external;
function XmStringBaseline(fontlist:TXmFontList; _string:TXmString):TDimension;cdecl;external;
function XmStringWidth(fontlist:TXmFontList; _string:TXmString):TDimension;cdecl;external;
function XmStringHeight(fontlist:TXmFontList; _string:TXmString):TDimension;cdecl;external;
procedure XmStringExtent(fontlist:TXmFontList; _string:TXmString; width:PDimension; height:PDimension);cdecl;external;
function XmStringLineCount(_string:TXmString):longint;cdecl;external;
{$if NeedWidePrototypes}
{$else}
{$endif}
    { NeedWidePrototypes  }

procedure XmStringDraw(d:PDisplay; w:TWindow; fontlist:TXmFontList; _string:TXmString; gc:TGC; 
                x:longint; y:longint; width:longint; align:dword; lay_dir:dword; 
                x:TPosition; y:TPosition; width:TDimension; align:byte; lay_dir:byte; 
                clip:PXRectangle);cdecl;external;
{$if NeedWidePrototypes}
{$else}
{$endif}
    { NeedWidePrototypes  }

procedure XmStringDrawImage(d:PDisplay; w:TWindow; fontlist:TXmFontList; _string:TXmString; gc:TGC; 
                x:longint; y:longint; width:longint; align:dword; lay_dir:dword; 
                x:TPosition; y:TPosition; width:TDimension; align:byte; lay_dir:byte; 
                clip:PXRectangle);cdecl;external;
{$if NeedWidePrototypes}
{$else}
{$endif}
    { NeedWidePrototypes  }
